# snakemake-software-deployment-plugin-envmodules

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: announce-release.yml  ci.yml  release-please.yml
docs/: intro.md
src/snakemake_software_deployment_plugin_envmodules/: __init__.py
tests/: test_plugin.py
tests/modules/: somecmd  test.sh
