[project]
name = "snakemake-software-deployment-plugin-envmodules"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "^3.11"
dependencies = ["snakemake-interface-software-deployment-plugins @ file:///home/johannes/scms/snakemake-interface-software-deployment-plugins"]
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/software-deployment/envmodules.html"
[[project.authors]]
name = "Johannes Koester"
email = "johannes.koester@uni-due.de"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
[[tool.poetry.packages]]
include = "snakemake_software_deployment_plugin_envmodules"
from = "src"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
coverage = "^7.6.12"
pytest = "^8.3.5"
snakemake = "^8.29.0"


[tool.poetry.dependencies]
snakemake-interface-software-deployment-plugins = {develop = true}
