[project]
name = "snakemake-software-deployment-plugin-envmodules"
version = "0.1.3"
description = ""
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = ["snakemake-interface-software-deployment-plugins >=0.6.1,<1.0.0"]
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/software-deployment/envmodules.html"
[[project.authors]]
name = "Johannes Koester"
email = "johannes.koester@uni-due.de"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
[[tool.poetry.packages]]
include = "snakemake_software_deployment_plugin_envmodules"
from = "src"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.12"
pytest = "^8.3.5"
ruff = "^0.9.9"
